force-app/main/default/objects/Product__c/Product__c.object-meta.xml
<CustomObject>
    <label>Product</label>
    <nameField>
        <label>Produit Client Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>