force-app/main/default/objects/Product__c/fields/Annee_Fabrication__c.field-meta.xml
<CustomField>
    <fullName>Annee_Fabrication__c</fullName>
    <label>Annee Fabrication</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>