force-app/main/default/objects/Product__c/fields/Canal_Achat__c.field-meta.xml
<CustomField>
    <fullName>Canal_Achat__c</fullName>
    <label>Canal Achat</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Boutique</fullName>
            </value>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>Héritage</fullName>
            </value>
            <value>
                <fullName>Seconde main</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>