force-app/main/default/objects/Product__c/fields/Collection__c.field-meta.xml
<CustomField>
    <fullName>Collection__c</fullName>
    <label>Collection</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Classique</fullName>
            </value>
            <value>
                <fullName>Édition limitée</fullName>
            </value>
            <value>
                <fullName>Été 2026</fullName>
            </value>
            <value>
                <fullName>Hiver 2026</fullName>
            </value>
            <value>
                <fullName>Vintage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>