force-app/main/default/objects/Product__c/fields/Couleur__c.field-meta.xml
<CustomField>
    <fullName>Couleur__c</fullName>
    <label>Couleur</label>
    <length>50</length>
    <type>Text</type>
</CustomField>