force-app/main/default/objects/Product__c/fields/Date_Acquisition__c.field-meta.xml
<CustomField>
    <fullName>Date_Acquisition__c</fullName>
    <label>Date Acquisition</label>
    <type>Date</type>
</CustomField>