force-app/main/default/objects/Product__c/fields/Matiere__c.field-meta.xml
<CustomField>
    <fullName>Matiere__c</fullName>
    <label>Matiere</label>
    <length>100</length>
    <type>Text</type>
</CustomField>