force-app/main/default/objects/Product__c/fields/Modele__c.field-meta.xml
<CustomField>
    <fullName>Modele__c</fullName>
    <label>Modele</label>
    <length>100</length>
    <type>Text</type>
</CustomField>