force-app/main/default/objects/Product__c/fields/NFC_Tag_ID__c.field-meta.xml
<CustomField>
    <fullName>NFC_Tag_ID__c</fullName>
    <label>NFC Tag ID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>