force-app/main/default/objects/Product__c/fields/Nom_Produit__c.field-meta.xml
<CustomField>
    <fullName>Nom_Produit__c</fullName>
    <label>Nom Produit</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>