force-app/main/default/objects/Product__c/fields/Photo_Principal__c.field-meta.xml
<CustomField>
    <fullName>Photo_Principal__c</fullName>
    <label>Photo Principal</label>
    <type>Url</type>
</CustomField>