force-app/main/default/objects/Product__c/fields/Reference_Officielle__c.field-meta.xml
<CustomField>
    <fullName>Reference_Officielle__c</fullName>
    <externalId>true</externalId>
    <label>Reference Officielle</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>