force-app/main/default/objects/Product__c/fields/Statut_Certificat__c.field-meta.xml
<CustomField>
    <fullName>Statut_Certificat__c</fullName>
    <label>Statut Certificat</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>En attente</fullName>
            </value>
            <value>
                <fullName>Certifié</fullName>
            </value>
            <value>
                <fullName>Non certifié</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>